--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,12 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button x:Name="B1" Content="1" HorizontalAlignment="Left" Margin="134,186,0,0" VerticalAlignment="Top" Tag="1" Height="43" Width="46" Click="Add_digit"/>
-        <Label x:Name="Text" Content="0" HorizontalAlignment="Left" Margin="317,77,0,0" VerticalAlignment="Top" Width="335"/>
-        <Button x:Name="plus" Content="+" HorizontalAlignment="Left" Margin="325,186,0,0" VerticalAlignment="Top" Height="43" Width="75" Click="sum_click"/>
-        <Button x:Name="result" Content="=" HorizontalAlignment="Left" Margin="464,191,0,0" VerticalAlignment="Top" Height="43" Width="75" Click="result_click"/>
+        Title="MainWindow" Height="558" Width="381">
+    <Grid HorizontalAlignment="Center" Width="383" Margin="0,0,0,-1" RenderTransformOrigin="0.5,0.5">
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="0.35"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
+        <Button x:Name="B1" Content="1" HorizontalAlignment="Left" Margin="15,421,0,0" VerticalAlignment="Top" Tag="1" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Label x:Name="Text" Content="0" HorizontalAlignment="Left" Margin="19,63,0,0" VerticalAlignment="Top" Width="335" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="24"/>
+        <Button x:Name="plus" Content="+" HorizontalAlignment="Left" Margin="297,424,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="sum_click" FontSize="24"/>
+        <Button x:Name="result" Content="=" HorizontalAlignment="Left" Margin="297,473,0,0" VerticalAlignment="Top" Height="43" Width="77" Click="result_click" FontSize="24"/>
+        <Button x:Name="B2" Content="2" HorizontalAlignment="Left" Margin="111,422,0,0" VerticalAlignment="Top" Tag="2" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B3" Content="3" HorizontalAlignment="Left" Margin="204,422,0,0" VerticalAlignment="Top" Tag="3" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B4" Content="4" HorizontalAlignment="Left" Margin="16,371,0,0" VerticalAlignment="Top" Tag="4" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B5" Content="5" HorizontalAlignment="Left" Margin="112,371,0,0" VerticalAlignment="Top" Tag="5" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B6" Content="6" HorizontalAlignment="Left" Margin="205,371,0,0" VerticalAlignment="Top" Tag="6" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B8" Content="8" HorizontalAlignment="Left" Margin="113,319,0,0" VerticalAlignment="Top" Tag="8" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B9" Content="9" HorizontalAlignment="Left" Margin="206,319,0,0" VerticalAlignment="Top" Tag="9" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B0" Content="0" HorizontalAlignment="Left" Margin="110,473,0,0" VerticalAlignment="Top" Tag="0" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
+        <Button x:Name="B7" Content="7" HorizontalAlignment="Left" Margin="17,320,0,0" VerticalAlignment="Top" Tag="7" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
 
     </Grid>
 </Window>
