--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,7 +29,8 @@
         <Button x:Name="B0" Content="0" HorizontalAlignment="Left" Margin="108,472,0,0" VerticalAlignment="Top" Tag="0" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
         <Button x:Name="B7" Content="7" HorizontalAlignment="Left" Margin="12,318,0,0" VerticalAlignment="Top" Tag="7" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
         <Button x:Name="division" Content="/" HorizontalAlignment="Left" Margin="294,266,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="division_click" FontSize="24"/>
-        <Button x:Name="division_Copy" Content="-" HorizontalAlignment="Left" Margin="294,370,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="minus_click" FontSize="24"/>
+        <Button x:Name="minus" Content="-" HorizontalAlignment="Left" Margin="294,370,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="minus_click" FontSize="24"/>
+        <Button x:Name="myltiply" Content="*" HorizontalAlignment="Left" Margin="294,318,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="myltiply_click" FontSize="24"/>
 
     </Grid>
 </Window>
