--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,7 +16,7 @@
             </TransformGroup>
         </Grid.RenderTransform>
         <Button x:Name="B1" Content="1" HorizontalAlignment="Left" Margin="12,421,0,0" VerticalAlignment="Top" Tag="1" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
-        <Label x:Name="Text" Content="0" HorizontalAlignment="Left" Margin="19,63,0,0" VerticalAlignment="Top" Width="335" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="24"/>
+        <Label x:Name="Text" Content="0" HorizontalAlignment="Left" Margin="16,85,0,0" VerticalAlignment="Top" Width="353" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="24"/>
         <Button x:Name="plus" Content="+" HorizontalAlignment="Left" Margin="294,421,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="sum_click" FontSize="24"/>
         <Button x:Name="result" Content="=" HorizontalAlignment="Left" Margin="294,472,0,0" VerticalAlignment="Top" Height="43" Width="77" Click="result_click" FontSize="24"/>
         <Button x:Name="B2" Content="2" HorizontalAlignment="Left" Margin="108,421,0,0" VerticalAlignment="Top" Tag="2" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
@@ -31,6 +31,8 @@
         <Button x:Name="division" Content="/" HorizontalAlignment="Left" Margin="294,266,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="division_click" FontSize="24"/>
         <Button x:Name="minus" Content="-" HorizontalAlignment="Left" Margin="294,370,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="minus_click" FontSize="24"/>
         <Button x:Name="myltiply" Content="*" HorizontalAlignment="Left" Margin="294,318,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="myltiply_click" FontSize="24"/>
+        <Label x:Name="behind_text" Content="" HorizontalAlignment="Left" Margin="16,39,0,0" VerticalAlignment="Top" Width="353" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="14"/>
+        <Button x:Name="division_Copy" Content="&lt;--" HorizontalAlignment="Left" Margin="294,214,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="delete_last_click" FontSize="24"/>
 
     </Grid>
 </Window>
