--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,7 +18,7 @@
         <Button x:Name="B1" Content="1" HorizontalAlignment="Left" Margin="12,421,0,0" VerticalAlignment="Top" Tag="1" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
         <Label x:Name="Text" Content="0" HorizontalAlignment="Left" Margin="16,85,0,0" VerticalAlignment="Top" Width="353" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="24"/>
         <Button x:Name="plus" Content="+" HorizontalAlignment="Left" Margin="294,421,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="sum_click" FontSize="24"/>
-        <Button x:Name="result" Content="=" HorizontalAlignment="Left" Margin="294,472,0,0" VerticalAlignment="Top" Height="43" Width="77" Click="result_click" FontSize="24"/>
+        <Button x:Name="result" Content="=" HorizontalAlignment="Left" Margin="294,472,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="result_click" FontSize="24"/>
         <Button x:Name="B2" Content="2" HorizontalAlignment="Left" Margin="108,421,0,0" VerticalAlignment="Top" Tag="2" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
         <Button x:Name="B3" Content="3" HorizontalAlignment="Left" Margin="201,421,0,0" VerticalAlignment="Top" Tag="3" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
         <Button x:Name="B4" Content="4" HorizontalAlignment="Left" Margin="12,370,0,0" VerticalAlignment="Top" Tag="4" Height="43" Width="79" Click="Add_digit" FontSize="24"/>
@@ -33,6 +33,9 @@
         <Button x:Name="myltiply" Content="*" HorizontalAlignment="Left" Margin="294,318,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="myltiply_click" FontSize="24"/>
         <Label x:Name="behind_text" Content="" HorizontalAlignment="Left" Margin="16,39,0,0" VerticalAlignment="Top" Width="353" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="14"/>
         <Button x:Name="division_Copy" Content="&lt;--" HorizontalAlignment="Left" Margin="294,214,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="delete_last_click" FontSize="24"/>
+        <Button x:Name="comma" Content="," HorizontalAlignment="Left" Margin="201,472,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="Add_digit" FontSize="24" Tag=","/>
+        <Button x:Name="sign" Content="+/-" HorizontalAlignment="Left" Margin="12,472,0,0" VerticalAlignment="Top" Tag="" Height="43" Width="79" Click="change_sign" FontSize="24"/>
+        <Button x:Name="С" Content="С" HorizontalAlignment="Left" Margin="201,214,0,0" VerticalAlignment="Top" Height="43" Width="79" Click="c_click" FontSize="24"/>
 
     </Grid>
 </Window>
