--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp3.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="Calc.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="558" Width="384" Background="#FFB0DDE0">
+        Title="MainWindow" Height="558" Width="384" Background="#FFB0DDE0" KeyDown="key_use">
     <Grid HorizontalAlignment="Center" Width="382" Margin="0,0,0,-1" RenderTransformOrigin="0.5,0.5">
         <Grid.RenderTransform>
             <TransformGroup>
